# SigFig

./: .gitignore  LICENSE  README.md  setup.cfg
SigFig/: __init__.py
tests/: SigFig_test.py
