[metadata]
name = SigFig-mdhv
version = 1.0
author = Mitchell Huot
author_email = mitchell.huot@gmail.com
description = A package  to support arithmetic using Significant Figures rules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = SigFig
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src